# langGraph_tutorial

./: .gitignore  CharacterTextSplitter.ipynb  HTMLtextSplitter.ipynb  RecursiveJSONSplitter.ipynb  chatbots.ipynb  chroma.ipynb  embedding.ipynb  faiss.ipynb  gettingStarted.ipynb  huggingface.ipynb  ingestion.ipynb  main.py  ollama_embedding.ipynb  pyproject.toml  simple_app.ipynb  simplellmlecl.ipynb  speech.txt  textsplitter.ipynb  vectoretriever.ipynb
chroma_db/: chroma.sqlite3
docker/: docker-compose.yml
docker/ollama_data/: id_ed25519  id_ed25519.pub
faiss_index/: index.faiss  index.pkl
langserve/: serve.py
