[project]
name = "langgraph-lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "fitz>=0.0.1.dev2",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-text-splitters>=0.3.9",
    "pymupdf>=1.26.3",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
]
